<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Data SDK Test Tool</string>
    <string name="start">Start</string>
    <string name="client_id">Enter a client id</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="logout">Logout</string>
    <string name="data_collection_active">Data Collection is currently active.</string>
    <string name="stop">Stop</string>
    <string name="device_id">Device ID</string>
    <string name="profile_type">Profile Type</string>
    <string name="client_id_label">Client ID</string>
    <string name="wifi_only">Upload Mode</string>
    <string name="initial_data_sent">Has uploaded initial statistics</string>
    <string name="refresh">Refresh</string>
    <string name="title_activity_demo">DataSDK Demo</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Verification -->
    <string name="reference_number">Reference Number</string>
    <string name="application_payload">Application JSON Payload</string>
    <string name="firstname">First Name</string>
    <string name="middlename">Middle Name</string>
    <string name="lastname">Last Name</string>
    <string name="dob">Date of Birth</string>
    <string name="employer">Employer</string>
    <string name="phone_mobile">Mobile Phone</string>
    <string name="phone_home">Home Phone</string>
    <string name="mother_firstname">First Name</string>
    <string name="mother_middlename">Middle Name</string>
    <string name="mother_lastname">Last Name</string>
    <string name="university">University</string>
    <string name="email">Email</string>
    <string name="address_line1">Line 1</string>
    <string name="address_line2">Line 2</string>
    <string name="address_city">City</string>
    <string name="address_adm_div">Administrative Division</string>
    <string name="address_country_code">Country</string>
    <string name="address_postal_code">Postal Code</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>

    <string name="prov_id">Provider Id</string>
    <string name="prov_accesstoken">Provider Access Token</string>
    <string name="prov_extradata">Provider Extra Data (optional)</string>
    <string name="prov_expiration">Access Token Expiration</string>
</resources>
