<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:lenddo="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/android_data_test_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/client_id" />

        <EditText
            android:id="@+id/client_id_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="1234567890" />
        <Button
            android:id="@+id/start_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/session_active_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data_collection_active"
            android:textStyle="bold" />
        <TextView
            android:text="@string/device_id"
            style="@style/infoLabel" />
        <TextView
            android:id="@+id/device_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/client_id_label"
            style="@style/infoLabel"/>
        <TextView
            android:id="@+id/client_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/profile_type"
            style="@style/infoLabel" />
        <TextView
            android:id="@+id/profile_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/wifi_only"
            style="@style/infoLabel" />
        <TextView
            android:id="@+id/wifi_only_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/initial_data_sent"
            style="@style/infoLabel" />
        <TextView
            android:id="@+id/initial_data_sent_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/logout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stop" />
    </LinearLayout>

    <Button
        android:id="@+id/refresh_button"
        android:text="@string/refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="test Form Filling Analytics"
        android:id="@+id/btn_sample"/>

    <com.lenddo.core.uiwidgets.TimedEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tedt_firstname"
        android:text=""
        lenddo:enableFormFillingAnalytics="true"
        lenddo:analyticsKeyTitle="firstname" />

    <com.lenddo.core.uiwidgets.TimedEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tedt_lastname"
        android:text=""
        lenddo:enableFormFillingAnalytics="true"
        lenddo:analyticsKeyTitle="lastname" />

    <com.lenddo.core.uiwidgets.TimedSeekbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tsbr_loanamount"
        android:text="Loan Amount"
        android:max="10"
        android:progress="0"
        lenddo:enableFormFillingAnalytics="true"
        lenddo:analyticsKeyTitle="loanamount" />


</LinearLayout>
